--- a/thought-miner-data/pyproject.toml
+++ b/thought-miner-data/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "thought-miner-data"
-description = "contains `thought-miner` interfaces for SQL and ChromaDB data models"
+description = "contains thought-miner interfaces for SQL and ChromaDB data models"
 readme = "README.md"
 requires-python = ">=3.8"
 license = { file = "LICENSE.txt" }
@@ -19,15 +19,11 @@ name = "Clark Saben"
 email = ""
 
 [tool.hatch.version]
-path = "src/thought_miner_data/thought_miner_data/__init__.py"
+path = "src/thought_miner_data/__init__.py"
 pattern = "__version__: Final\\[str\\] = \"(?P<version>.*?)\""
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/thought_miner_data"]
 
 [tool.ruff]
 src = ["src", "tests"]
-namespace-packages = ["thought_miner_data"]
 line-length = 88
 indent-width = 4
 fix = true
@@ -64,6 +60,7 @@ select = [
     "ISC",   # flake8-implicit-str-concat
     "ICN",   # flake8-import-conventions
     "G",     # flake8-logging-format
+    "INP",   # flake8-no-pep420
     "PIE",   # flake8-pie
     "T20",   # flake8-print
     "PT",    # flake8-pytest-style,
@@ -131,7 +128,6 @@ ignore = [
     "COM", # flake8-commas (handled by formatter)
     "CPY", # flake8-copyright (copyright headers aren't ubiquitous)
     "EXE", # flake8-executable (template doesn't have directly invoked python files)
-    "INP", # flake8-no-pep420 (this is a pep 420 project)
     "PYI", # flake8-pyi (specific to type stub packages)
     "Q",   # flake8-quotes (handled by formatter)
     "ARG", # flake8-unused-arguments (basically unavoidable when using inheritance)
@@ -179,9 +175,6 @@ mark-parentheses = false
 allow-magic-value-types = []
 
 [tool.mypy]
-mypy_path = "src,tests"
-namespace_packages = true
-explicit_package_bases = true
 pretty = true
 warn_unused_configs = true
 disallow_any_generics = true
