--- a/thought-miner-embeddings/pyproject.toml
+++ b/thought-miner-embeddings/pyproject.toml
@@ -15,22 +15,18 @@ optional-dependencies = { dev = ["ruff", "mypy", "pytest"] }
 dynamic = ["version"]
 
 [[project.authors]]
-name = ""
+name = "Clark Saben"
 email = ""
 
 [project.scripts]
-thought-miner-embeddings = "thought_miner_embeddings.thought_miner_embeddings.__main__:thought_miner_embeddings"
+thought-miner-embeddings = "thought_miner_embeddings.__main__:thought_miner_embeddings"
 
 [tool.hatch.version]
-path = "src/thought_miner_embeddings/thought_miner_embeddings/__init__.py"
+path = "src/thought_miner_embeddings/__init__.py"
 pattern = "__version__: Final\\[str\\] = \"(?P<version>.*?)\""
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/thought_miner_embeddings"]
 
 [tool.ruff]
 src = ["src", "tests"]
-namespace-packages = ["thought_miner_embeddings"]
 line-length = 88
 indent-width = 4
 fix = true
@@ -67,6 +63,7 @@ select = [
     "ISC",   # flake8-implicit-str-concat
     "ICN",   # flake8-import-conventions
     "G",     # flake8-logging-format
+    "INP",   # flake8-no-pep420
     "PIE",   # flake8-pie
     "T20",   # flake8-print
     "PT",    # flake8-pytest-style,
@@ -134,7 +131,6 @@ ignore = [
     "COM", # flake8-commas (handled by formatter)
     "CPY", # flake8-copyright (copyright headers aren't ubiquitous)
     "EXE", # flake8-executable (template doesn't have directly invoked python files)
-    "INP", # flake8-no-pep420 (this is a pep 420 project)
     "PYI", # flake8-pyi (specific to type stub packages)
     "Q",   # flake8-quotes (handled by formatter)
     "ARG", # flake8-unused-arguments (basically unavoidable when using inheritance)
@@ -182,9 +178,6 @@ mark-parentheses = false
 allow-magic-value-types = []
 
 [tool.mypy]
-mypy_path = "src,tests"
-namespace_packages = true
-explicit_package_bases = true
 pretty = true
 warn_unused_configs = true
 disallow_any_generics = true
