basic demo of server-start call in cli

--- a/thought-miner-embeddings/pyproject.toml
+++ b/thought-miner-embeddings/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.8"
 license = { file = "LICENSE.txt" }
 keywords = []
 classifiers = []
-dependencies = ["click"]
+dependencies = ["click", "litestar[standard]", "uvicorn"]
 optional-dependencies = { dev = ["ruff", "mypy", "pytest"] }
 dynamic = ["version"]
 
