--- a/thought-miner-transcribe/pyproject.toml
+++ b/thought-miner-transcribe/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.8"
 license = { file = "LICENSE.txt" }
 keywords = []
 classifiers = []
-dependencies = ["click"]
+dependencies = ["click", "whisper","litestar","uvicorn", "pydantic"]
 optional-dependencies = { dev = ["ruff", "mypy", "pytest"] }
 dynamic = ["version"]
 
