--- a/thought-miner-data-access/pyproject.toml
+++ b/thought-miner-data-access/pyproject.toml
@@ -3,14 +3,14 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "thought-miner-data"
-description = "contains thought-miner interfaces for SQL and ChromaDB data models"
+name = "thought-miner-data-access"
+description = "defines data access objects to be shared across containers for shared server data management"
 readme = "README.md"
 requires-python = ">=3.8"
 license = { file = "LICENSE.txt" }
 keywords = []
 classifiers = []
-dependencies = []
+dependencies = [ "pydantic"]
 optional-dependencies = { dev = ["ruff", "mypy", "pytest"] }
 dynamic = ["version"]
 
@@ -19,7 +19,7 @@ name = "Clark Saben"
 email = ""
 
 [tool.hatch.version]
-path = "src/thought_miner_data/__init__.py"
+path = "src/thought_miner_data_access/__init__.py"
 pattern = "__version__: Final\\[str\\] = \"(?P<version>.*?)\""
 
 [tool.ruff]
@@ -159,7 +159,7 @@ convention = "google"
 ignore-decorators = ["typing.overload"]
 
 [tool.ruff.lint.isort]
-known-first-party = ["thought_miner_data"]
+known-first-party = ["thought_miner_data_access"]
 
 [tool.ruff.lint.flake8-bandit]
 check-typed-exception = true
