attempted dockerfile cache
- can't figure out how to do this without using pypi to store my parent package
- uv sync works when i run build context from actual proj but not from above even with --directory

--- a/thought-miner-transcribe/pyproject.toml
+++ b/thought-miner-transcribe/pyproject.toml
@@ -11,7 +11,14 @@ license = { file = "LICENSE.txt" }
 keywords = []
 classifiers = []
 # TODO: private pypi??
-dependencies = ["click", "openai-whisper","litestar","uvicorn", "pydantic", "thought-miner-data-access"]
+dependencies = [
+    "click",
+    "openai-whisper",
+    "litestar",
+    "uvicorn",
+    "pydantic",
+    "thought-miner-data-access",
+]
 optional-dependencies = { dev = ["ruff", "mypy", "pytest"] }
 dynamic = ["version"]
 
@@ -199,3 +206,6 @@ no_implicit_reexport = true
 
 [tool.pytest.ini_options]
 console_output_style = "progress"
+
+[tool.uv.sources]
+thought-miner-data-access = { path = "../thought-miner-data-access" }
