--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,6 @@ services:
       - "8000:8000"
     # big W: https://stackoverflow.com/a/76030067
     network_mode: "host"
-      # - "3001:8001"
     # could use interpolation: https://docs.docker.com/compose/how-tos/environment-variables/variable-interpolation/#:~:text=env%20file-,An%20.,manage%20configuration%20in%20one%20place.
     # for variable volume selection based on prod vs dev
     volumes:
@@ -33,3 +32,27 @@ services:
         # Rebuild the image on changes to the `pyproject.toml`
         - action: rebuild
           path: ./pyproject.toml
+
+  alignment:
+    build:
+      context: ./
+      dockerfile: ./thought-miner-alignment/Dockerfile
+    ports:
+      - "8000:8001"
+    network_mode: "host"
+    volumes:
+      - /home/arelius/thought-miner:/opt/app/dev
+    environment:
+      - PYTHONPATH=/opt/app
+    command: ["thought-miner-alignment", "start-server"]
+    restart: unless-stopped
+    develop:
+      watch:
+        - action: sync
+          path: ./thought-miner-alignment
+          target: /opt/app
+          ignore:
+            - .venv/
+        - action: rebuild
+          # path: ./pyproject.toml
+          path: ./thought-miner-alignment/pyproject.toml
