--- a/thought-miner-alignment/Dockerfile
+++ b/thought-miner-alignment/Dockerfile
@@ -1,48 +1,77 @@
-FROM debian:stable-slim
+# Use a Python image with uv pre-installed
+FROM ghcr.io/astral-sh/uv:python3.11-bookworm-slim
 
+# Configure environment variables
+# ENV DEBIAN_FRONTEND=noninteractive
+ENV LC_ALL=C.UTF-8
+ENV LANG=C.UTF-8
 
-ENV DEBIAN_FRONTEND noninteractive
-ENV LC_ALL C.UTF-8
-ENV LANG C.UTF-8
-
-
-# -- Install utilities
+# Install system dependencies in a single layer + ffmpeg
 RUN apt-get update --fix-missing --no-install-recommends && \
-    apt-get install -y wget bzip2 ca-certificates curl git && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -y \
+    curl \
+    git \
+    python3-dev \
+    espeak \
+    libespeak-dev \
+    ffmpeg \
+    build-essential \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 
-# -- Anaconda home setup
-ENV CONDA_HOME /opt/conda
-ENV PATH $CONDA_HOME/bin:$PATH
+# Set working directory
+WORKDIR /opt/app
+
+# Enable bytecode compilation
+ENV UV_COMPILE_BYTECODE=1
+
+# Copy from the cache instead of linking since it's a mounted volume
+ENV UV_LINK_MODE=copy
+
+# TODO: should not be needed after we make data-access a pypi thing
+# local package dependency injection (literally a hard copy for a bit, sucks)
+# wait this can actually work with the compose using context to set to above
+# and adjusting the source=tht-miner-transcribe
+COPY thought-miner-data-access /opt/thought-miner-data-access
+
+# Install the project's dependencies using the lockfile and settings
+# RUN --mount=type=cache,target=/root/.cache/uv \
+#     --mount=type=bind,source=thought-miner-alignment/uv.lock,target=uv.lock \
+#     --mount=type=bind,source=thought-miner-alignment/pyproject.toml,target=pyproject.toml \
+#     uv sync --frozen --no-install-project --no-dev
+RUN --mount=type=bind,source=thought-miner-alignment/pyproject.toml,target=pyproject.toml 
+
+# Then, add the rest of the project source code and install it
+# Installing separately from its dependencies allows optimal layer caching
+# Add project files individually for better layer caching
+COPY thought-miner-alignment/LICENSE.txt ./LICENSE.txt
+COPY thought-miner-alignment/MANIFEST.in ./MANIFEST.in
+COPY thought-miner-alignment/README.md ./README.md
+COPY thought-miner-alignment/pyproject.toml ./pyproject.toml
+COPY thought-miner-alignment/src/ ./src/
+# specific to uv (docs naively assuem this is in your current dir and add wholesale)
+# COPY thought-miner-alignment/uv.lock ./uv.lock
+
+# RUN --mount=type=cache,target=/root/.cache/uv \
+#     uv sync --frozen --no-dev 
+
+# Install project in editable mode with support for private pip configs
+# RUN --mount=type=secret,id=pip,target=/etc/pip.conf \
+#     uv pip install -e .
+RUN pip install numpy
+# RUN pip install aeneas
+# RUN pip install -e .
+RUN uv pip install -e .
+
+# Place executables in the environment at the front of the path
+ENV PATH="/opt/app/.venv/bin:$PATH"
 
 
-# -- Conda & Python versions
-ARG CONDA_VERSION=latest
-ARG PYTHON_VERSION=3.12
+# TODO: update to be used alongside docker-compose.yml
+EXPOSE 8000
 
-
-# -- Install Miniconda python
-RUN wget --quiet https://repo.continuum.io/miniconda/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh -O ~/conda.sh && \
-    /bin/bash ~/conda.sh -b -p $CONDA_HOME && \
-    rm ~/conda.sh && \
-    conda install --yes python=${PYTHON_VERSION} && \
-    $CONDA_HOME/bin/conda clean --all --yes
-
-
-# -- Install the project
-ARG PROJECT_HOME=/opt/thought-miner-alignment
-
-ADD LICENSE.txt ${PROJECT_HOME}/LICENSE.txt
-ADD MANIFEST.in ${PROJECT_HOME}/MANIFEST.in
-ADD README.md ${PROJECT_HOME}/README.md
-ADD pyproject.toml ${PROJECT_HOME}/pyproject.toml
-ADD src/ ${PROJECT_HOME}/src/
-
-# Run your build with `--secret id=pip,src=/path/to/pip/conf-or-ini` to use a custom pip configuration
-RUN --mount=type=secret,id=pip,target=/etc/pip.conf pip install -e ${PROJECT_HOME}/
-
-
-# -- Launch project on run
-ENTRYPOINT ["thought-miner-alignment"]
+# Reset the entrypoint, don't invoke `uv`
+ENTRYPOINT []
+# Set the info to be default for now 
+CMD ["thought-miner-alignment", "start-server"]
