--- a/thought-miner-transcribe/Dockerfile
+++ b/thought-miner-transcribe/Dockerfile
@@ -25,45 +25,78 @@ ENV UV_COMPILE_BYTECODE=1
 # Copy from the cache instead of linking since it's a mounted volume
 ENV UV_LINK_MODE=copy
 
-# TODO: should not be needed after we make data-access a pypi thing
-# local package dependency injection (literally a hard copy for a bit, sucks)
-# wait this can actually work with the compose using context to set to above
-# and adjusting the source=tht-miner-transcribe
+# NOTE: this didnt change anything, autosync for python still doesnwork
 COPY thought-miner-data-access /opt/thought-miner-data-access
 
-# Install the project's dependencies using the lockfile and settings
+# Install dependencies first
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=bind,source=thought-miner-transcribe/uv.lock,target=uv.lock \
     --mount=type=bind,source=thought-miner-transcribe/pyproject.toml,target=pyproject.toml \
     uv sync --frozen --no-install-project --no-dev
 
-# Then, add the rest of the project source code and install it
-# Installing separately from its dependencies allows optimal layer caching
-# Add project files individually for better layer caching
-COPY thought-miner-transcribe/LICENSE.txt ./LICENSE.txt
-COPY thought-miner-transcribe/MANIFEST.in ./MANIFEST.in
-COPY thought-miner-transcribe/README.md ./README.md
-COPY thought-miner-transcribe/pyproject.toml ./pyproject.toml
+# Copy project metadata files
+COPY thought-miner-transcribe/LICENSE.txt \
+     thought-miner-transcribe/MANIFEST.in \
+     thought-miner-transcribe/README.md \
+     thought-miner-transcribe/pyproject.toml \
+     thought-miner-transcribe/uv.lock \
+     ./
+
+# Create src directory explicitly
+RUN mkdir -p /opt/app/src
+
+# Copy initial source code (will be overridden by volume mount)
 COPY thought-miner-transcribe/src/ ./src/
-# specific to uv (docs naively assuem this is in your current dir and add wholesale)
-COPY thought-miner-transcribe/uv.lock ./uv.lock
 
-RUN --mount=type=cache,target=/root/.cache/uv \
-    uv sync --frozen --no-dev 
-
-# Install project in editable mode with support for private pip configs
-# RUN --mount=type=secret,id=pip,target=/etc/pip.conf \
-#     uv pip install -e .
+# Install in development mode
 RUN uv pip install -e .
 
-# Place executables in the environment at the front of the path
 ENV PATH="/opt/app/.venv/bin:$PATH"
 
+EXPOSE 8001
 
-# TODO: update to be used alongside docker-compose.yml
-EXPOSE 8000
-
-# Reset the entrypoint, don't invoke `uv`
 ENTRYPOINT []
-# Set the info to be default for now 
 CMD ["thought-miner-transcribe", "start-server"]
+
+# TODO: should not be needed after we make data-access a pypi thing
+# local package dependency injection (literally a hard copy for a bit, sucks)
+# wait this can actually work with the compose using context to set to above
+# and adjusting the source=tht-miner-transcribe
+# COPY thought-miner-data-access /opt/thought-miner-data-access
+
+# # Install the project's dependencies using the lockfile and settings
+# RUN --mount=type=cache,target=/root/.cache/uv \
+#     --mount=type=bind,source=thought-miner-transcribe/uv.lock,target=uv.lock \
+#     --mount=type=bind,source=thought-miner-transcribe/pyproject.toml,target=pyproject.toml \
+#     uv sync --frozen --no-install-project --no-dev
+
+# # Then, add the rest of the project source code and install it
+# # Installing separately from its dependencies allows optimal layer caching
+# # Add project files individually for better layer caching
+# COPY thought-miner-transcribe/LICENSE.txt ./LICENSE.txt
+# COPY thought-miner-transcribe/MANIFEST.in ./MANIFEST.in
+# COPY thought-miner-transcribe/README.md ./README.md
+# COPY thought-miner-transcribe/pyproject.toml ./pyproject.toml
+# COPY thought-miner-transcribe/src/ ./src/
+# # specific to uv (docs naively assuem this is in your current dir and add wholesale)
+# COPY thought-miner-transcribe/uv.lock ./uv.lock
+
+# RUN --mount=type=cache,target=/root/.cache/uv \
+#     uv sync --frozen --no-dev 
+
+# # Install project in editable mode with support for private pip configs
+# # RUN --mount=type=secret,id=pip,target=/etc/pip.conf \
+# #     uv pip install -e .
+# RUN uv pip install -e .
+
+# # Place executables in the environment at the front of the path
+# ENV PATH="/opt/app/.venv/bin:$PATH"
+
+
+# # TODO: update to be used alongside docker-compose.yml
+# EXPOSE 8000
+
+# # Reset the entrypoint, don't invoke `uv`
+# ENTRYPOINT []
+# # Set the info to be default for now 
+# CMD ["thought-miner-transcribe", "start-server"]
