--- a/thought-miner-data-access/pyproject.toml
+++ b/thought-miner-data-access/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.8"
 license = { file = "LICENSE.txt" }
 keywords = []
 classifiers = []
-dependencies = [ "pydantic"]
+dependencies = [ "pydantic", "psycopg2-binary"]
 optional-dependencies = { dev = ["ruff", "mypy", "pytest"] }
 dynamic = ["version"]
 
