--- a/thought-miner-embeddings/Dockerfile
+++ b/thought-miner-embeddings/Dockerfile
@@ -1,48 +1,62 @@
-FROM debian:stable-slim
+# Use a Python image with uv pre-installed
+FROM ghcr.io/astral-sh/uv:python3.11-bookworm-slim
 
+# Configure environment variables
+# ENV DEBIAN_FRONTEND=noninteractive
+ENV LC_ALL=C.UTF-8
+ENV LANG=C.UTF-8
 
-ENV DEBIAN_FRONTEND noninteractive
-ENV LC_ALL C.UTF-8
-ENV LANG C.UTF-8
-
-
-# -- Install utilities
+# Install system dependencies in a single layer + ffmpeg
 RUN apt-get update --fix-missing --no-install-recommends && \
-    apt-get install -y wget bzip2 ca-certificates curl git && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -y \
+    curl \
+    git \
+    ffmpeg \ 
+    build-essential \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 
-# -- Anaconda home setup
-ENV CONDA_HOME /opt/conda
-ENV PATH $CONDA_HOME/bin:$PATH
+# Set working directory
+WORKDIR /opt/app
 
+# Enable bytecode compilation
+ENV UV_COMPILE_BYTECODE=1
 
-# -- Conda & Python versions
-ARG CONDA_VERSION=latest
-ARG PYTHON_VERSION=3.12
+# Copy from the cache instead of linking since it's a mounted volume
+ENV UV_LINK_MODE=copy
 
+# NOTE: this didnt change anything, autosync for python still doesnwork
+COPY thought-miner-data-access /opt/thought-miner-data-access
 
-# -- Install Miniconda python
-RUN wget --quiet https://repo.continuum.io/miniconda/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh -O ~/conda.sh && \
-    /bin/bash ~/conda.sh -b -p $CONDA_HOME && \
-    rm ~/conda.sh && \
-    conda install --yes python=${PYTHON_VERSION} && \
-    $CONDA_HOME/bin/conda clean --all --yes
+# Install dependencies first
+RUN --mount=type=cache,target=/root/.cache/uv \
+    --mount=type=bind,source=thought-miner-embeddings/uv.lock,target=uv.lock \
+    --mount=type=bind,source=thought-miner-embeddings/pyproject.toml,target=pyproject.toml \
+    uv sync --frozen --no-install-project --no-dev
 
+# Copy project metadata files
+COPY thought-miner-embeddings/LICENSE.txt \
+     thought-miner-embeddings/MANIFEST.in \
+     thought-miner-embeddings/README.md \
+     thought-miner-embeddings/pyproject.toml \
+     thought-miner-embeddings/uv.lock \
+     ./
 
-# -- Install the project
-ARG PROJECT_HOME=/opt/thought-miner-embeddings
+# Create src directory explicitly
+RUN mkdir -p /opt/app/src
 
-ADD LICENSE.txt ${PROJECT_HOME}/LICENSE.txt
-ADD MANIFEST.in ${PROJECT_HOME}/MANIFEST.in
-ADD README.md ${PROJECT_HOME}/README.md
-ADD pyproject.toml ${PROJECT_HOME}/pyproject.toml
-ADD src/ ${PROJECT_HOME}/src/
+# Copy initial source code (will be overridden by volume mount)
+COPY thought-miner-embeddings/src/ ./src/
 
-# Run your build with `--secret id=pip,src=/path/to/pip/conf-or-ini` to use a custom pip configuration
-RUN --mount=type=secret,id=pip,target=/etc/pip.conf pip install -e ${PROJECT_HOME}/
+# Install in development mode
+RUN uv pip install .
+RUN uv pip install -e ../thought-miner-data-access
+# bruh
 
+ENV PATH="/opt/app/.venv/bin:$PATH"
 
-# -- Launch project on run
-ENTRYPOINT ["thought-miner-embeddings"]
+EXPOSE 8001
+
+ENTRYPOINT []
+CMD ["uv", "run", "thought-miner-embeddings", "start-server"]
